# nile-verifier-plugin

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
nile_verifier/: api.py  main.py
tests/: test_callable.py  test_get_files.py  test_get_import_search_paths.py
tests/resources/contracts/: A.cairo
tests/resources/contracts/subdir/: B.cairo
tests/resources/lib/: C.cairo
