[tool.poetry]
name = "nile-verifier"
version = "0.1.0"
description = ""
authors = ["Martín Triay <martriay@gmail.com>"]
readme = "README.md"
packages = [{include = "nile_verifier"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
cairo-nile = "^0.9.0"
requests = "^2.28.1"
yaspin = "^2.2.0"

[tool.poetry.plugins."nile_plugins"]
"verify" = "nile_verifier.main.verify"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
