[tool.poetry]
name = "nile-verifier"
version = "0.1.5"
description = "Nile plugin to verify smart contracts on starkscan.co"
keywords = ["cairo", "nile"]
license = "MIT"
authors = ["Martín Triay <martriay@gmail.com>"]
readme = "README.md"
packages = [{include = "nile_verifier"}]
homepage = "https://github.com/martriay/nile-verifier-plugin"
repository = "https://github.com/martriay/nile-verifier-plugin"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
click = "^8.1.3"
requests = "^2.28.1"
yaspin = "^2.2.0"
cairo-nile = "^0.13.0"
asyncclick = "^8.1.3.4"

[tool.poetry.plugins."nile_plugins.cli"]
"verify" = "nile_verifier.main.verify"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
